Fixed the boards page on mobile clipping

--- a/static/css/boards.css
+++ b/static/css/boards.css
@@ -107,4 +107,7 @@ hr {
   .boardsCellStats, #divBoardsLegend, .labelTags {
     display: none;
   }
+  #divStandardBox {
+    height: 120px;
+  }
 }
